--- a/opentreemap/treemap/css/sass/partials/_profile.scss
+++ b/opentreemap/treemap/css/sass/partials/_profile.scss
@@ -36,6 +36,9 @@
     input[type="text"] {
         width: 90%;
     }
+    .field-view {
+        margin-bottom: 10px;
+    }
 }
 
 #recent-user-edits {
