--- a/opentreemap/treemap/css/sass/partials/_typography.scss
+++ b/opentreemap/treemap/css/sass/partials/_typography.scss
@@ -90,6 +90,10 @@ textarea {
 	resize: none;
 }
 
+.table {
+	font-size: em(14px);
+}
+
 .btn-mini [class^="icon-"], 
 .btn-mini [class*=" icon-"] {
 	margin-top: 0;
