Force matches for species typeaheads, Fixes #668 and fixes #660

--- a/opentreemap/treemap/templates/treemap/plot_detail.html
+++ b/opentreemap/treemap/templates/treemap/plot_detail.html
@@ -213,7 +213,8 @@
               input: "#plot-species-typeahead",
               template: "#species-element-template",
               hidden: "#plot-species-hidden",
-              reverse: "id"
+              reverse: "id",
+              forceMatch: true
           }],
           imageUploadPanel: {
               panelId: '#add-photo-modal',
