--- a/opentreemap/treemap/templates/treemap/map-browse-trees.html
+++ b/opentreemap/treemap/templates/treemap/map-browse-trees.html
@@ -17,13 +17,13 @@
                 data-href="{{ request.get_full_path }}"
                 data-disabled-title="{% trans "Editing of the tree details is not available to all users" %}"
                 disabled="disabled">Edit Details</button>
-                <button class="btn" data-class="edit" id="save-details-button" style="display:none">Save</button>
+                <button class="btn btn-success" data-class="edit" id="save-details-button" style="display:none">Save</button>
                 <button class="btn" data-class="edit" id="cancel-edit-details-button" style="display:none">Cancel</button>
       </div>
       <div class="accordion-inner" id="plot-accordion">
       </div>
       <div id="move-plot-buttons">
-        <button class="btn btn-success btn-block"
+        <button class="btn btn-block"
                 data-always-enable="{{ request.instance_user|plot_field_is_writable:"geom" }}"
                 data-href="{{ request.get_full_path }}"
                 data-disabled-title="{% trans "Editing a plot's location is not available to all users" %}"
