--- a/opentreemap/treemap/templates/treemap/plot_detail.html
+++ b/opentreemap/treemap/templates/treemap/plot_detail.html
@@ -109,7 +109,7 @@
           {% endif %}
         </div>
 
-        <table class="table table-striped">
+        <table class="table table-striped table-hover">
           <h4>{% trans "Plot Information" %}</h4>
           <tbody>
             {% trans "Width" as width %}
