--- a/opentreemap/treemap/templates/instance_base.html
+++ b/opentreemap/treemap/templates/instance_base.html
@@ -31,6 +31,7 @@
 <li class="{% block activemanagement %}{% endblock %}"><a href="{% url settings.MANAGEMENT_VIEW_NAME instance_url_name=request.instance.url_name %}">{% trans "Manage Tree Map" %}</a></li>
 {% endif %}
 {% endif %}
+<li class="{% block activerecentedits %}{% endblock %}"><a href="{% url 'recent_edits' instance_url_name=request.instance.url_name %}">{% trans "Recent Edits" %}</a></li>
 {% endblock instancetopnav %}
 
 {% block subhead %}
