--- a/opentreemap/treemap/templates/treemap/recent_edits.html
+++ b/opentreemap/treemap/templates/treemap/recent_edits.html
@@ -4,6 +4,13 @@
 
 {% block page_title %} | {% trans "Recent Edits" %} {{plot.pk}}{% endblock %}
 
+{% block activeexplore %}
+{% endblock %}
+
+{% block activerecentedits %}
+active
+{% endblock %}
+
 {% block subhead %}
 {% endblock subhead %}
 
