Fixes #654, fix input-append styling regression, improve button styling in subnav

--- a/opentreemap/treemap/css/sass/partials/_header.scss
+++ b/opentreemap/treemap/css/sass/partials/_header.scss
@@ -179,7 +179,8 @@
 
         i {
             position: relative;
-            left: -3px;
+            left: -4px;
+            top: 2px;
         }
     }
 }
