--- a/opentreemap/treemap/templates/treemap/plot_detail.html
+++ b/opentreemap/treemap/templates/treemap/plot_detail.html
@@ -29,14 +29,14 @@
       <img src="{{ STATIC_URL }}img/tree.png">
       {% endif %}
       {% endwith %}
-      <a id="toggle-add-photo-modal"
+      <button id="toggle-add-photo-modal"
          data-toggle="modal"
          data-target="#add-photo-modal"
          data-always-enable="{{ request.instance_user.can_add_photos_to_tree }}"
          data-href="{{ request.get_full_path }}"
          disabled="disabled"
          data-disabled-title="{% trans "Adding tree photos is not available to all users" %}"
-         class="btn btn-mini add-photos">{% trans "Add Photo" %}</a>
+         class="btn btn-mini add-photos">{% trans "Add Photo" %}</button>
       <div id="upload-error" class="text-error" style="display: none"></div>
       <hr>
       <div id="sidebar">
