Work around bootstrap breaking street view styling, fixes #592

--- a/opentreemap/treemap/css/sass/partials/_treedetails.scss
+++ b/opentreemap/treemap/css/sass/partials/_treedetails.scss
@@ -18,3 +18,9 @@
 	min-width: 100%;
 	margin-bottom: 10px;
 }
+
+// Needed because bootstrap breaks street view on firefox
+// by setting max-width: 100% on all <img> tags
+.street-view-small img {
+    max-width: none;
+}
