Update "activation complete" text per Deb and style per Mike

--- a/opentreemap/treemap/templates/registration/activation_complete.html
+++ b/opentreemap/treemap/templates/registration/activation_complete.html
@@ -4,7 +4,19 @@
 {% block content %}
 <div class="content login-signup">
   <div class="well login-signup-panel">
-  	<h3>{% trans "Your account is now activated." %}</h3>
+    <h2 class="text-center">
+      Thank you for activating your OpenTreeMap.org account.
+    </h2>
+    <h3>
+      Want to request Beta access to the site and create your own tree map?
+    </h3>
+    <a href="/beta/" class="btn btn-primary btn-large">Request Beta Access</a>
+    <hr>
+    <h5>
+      Just want to view an existing map?
+      Ask the map owner to add you as a user on their map.
+      Then visit the website for that tree map.
+    </h5>
   </div>
 </div>
 {% endblock %}
