Style the password reset process
To get the custom template to properly override the stock templates I
needed to make sure our app is installed before Django registration.
Adam changed the app load order in 69f709eb, but I talked to him and
said it was most likely ok (and more correct) to switch it back.

Fixes #710

--- a/opentreemap/treemap/templates/registration/password_reset_confirm.html
+++ b/opentreemap/treemap/templates/registration/password_reset_confirm.html
@@ -2,20 +2,31 @@
 {% load i18n %}
 
 {% block content %}
+<div class="content login-signup">
+  <div class="well login-signup-panel">
+    {% if validlink %}
+        <h2>Reset your Password</h2>
 
-{% if validlink %}
+        <p>{% trans "Please enter and confirm a new password for your account." %}</p>
 
-<form method="post" action=".">
-  {% csrf_token %} 
-  {{ form.as_p }}
+        <form method="post" action=".">
+          {% csrf_token %} 
+          {{ form.as_p }}
 
-  <input type="submit" value="{% trans 'Submit' %}" />
-</form>
+          <input class="btn btn-primary" type="submit" value="{% trans 'Save' %}" />
+        </form>
+    {% else %}
+        <p>{% trans "Password reset failed" %}</p>
+    {% endif %}
+  </div>
+</div>
+{% endblock %}
 
-{% else %}
-
-<p>{% trans "Password reset failed" %}</p>
-
-{% endif %}
-
+{% block scripts %}
+<script>
+    (function (require) {
+        var $ = require('jquery')
+        $("input:password:visible:first").focus();
+    }(require))
+</script>
 {% endblock %}
