--- a/opentreemap/treemap/templates/registration/password_reset_email.html
+++ b/opentreemap/treemap/templates/registration/password_reset_email.html
@@ -1,5 +1,9 @@
 {% load i18n %}
-{% blocktrans %}Reset password at {{ site_name }}{% endblocktrans %}:
+{% blocktrans %}Hello,
+
+We received a request to reset your tree map account password. To continue the password reset process, please click on the link below or copy and paste it into your web browser.{% endblocktrans %}
 {% block reset_link %}
-{{ protocol }}://{{ domain }}{% url 'auth_password_reset_confirm' uidb36=uid token=token %}
-{% endblock %}
+https://opentreemap.org{% url 'auth_password_reset_confirm' uidb36=uid token=token %}
+{% endblock %}{% blocktrans %}
+If you did not make a request to reset your password then no further action is required.
+{% endblocktrans %}
