--- a/opentreemap/treemap/templates/registration/password_reset_form.html
+++ b/opentreemap/treemap/templates/registration/password_reset_form.html
@@ -2,10 +2,25 @@
 {% load i18n %}
 
 {% block content %}
-<form method="post" action=".">
-  {% csrf_token %} 
-  {{ form.as_p }}
+<div class="content login-signup">
+  <div class="well login-signup-panel">
+    <h2>{% trans "Reset your Password" %}</h2>
+    <p>{% trans "Forgot the password for your tree map account? Enter your email address and click \"Send\" to receive info on resetting your password." %}</p>
+    <form method="post" action=".">
+      {% csrf_token %} 
+      {{ form.as_p }}
+    
+      <input type="submit" class="btn btn-primary" value="{% trans 'Send' %}" />
+    </form>
+  </div>
+</div>
+{% endblock %}
 
-  <input type="submit" value="{% trans 'Submit' %}" />
-</form>
+{% block scripts %}
+<script>
+    (function (require) {
+        var $ = require('jquery')
+        $("input:text:visible:first").focus();
+    }(require))
+</script>
 {% endblock %}
