--- a/opentreemap/treemap/templates/registration/password_reset_complete.html
+++ b/opentreemap/treemap/templates/registration/password_reset_complete.html
@@ -3,8 +3,13 @@
 
 {% block content %}
 
-<p>{% trans "Password reset successfully" %}</p>
-
-<p><a href="{% url 'auth_login' %}">{% trans "Log in" %}</a></p>
+<div class="content login-signup">
+  <div class="well login-signup-panel">
+    <h2>{% trans "Password Reset" %}</h2>
+    <p>{% trans "Your password was reset successfully" %}</p>
+    
+    <p><a class="btn btn-primary" href="{% url 'auth_login' %}">{% trans "Log in" %}</a></p>
+  </div>
+</div>
 
 {% endblock %}
