--- a/opentreemap/treemap/templates/registration/password_reset_done.html
+++ b/opentreemap/treemap/templates/registration/password_reset_done.html
@@ -2,5 +2,10 @@
 {% load i18n %}
 
 {% block content %}
-<p>{% trans "Email with password reset instructions has been sent." %}</p>
+<div class="content login-signup">
+  <div class="well login-signup-panel">
+    <h2>{% trans "Password Reset Instructions Sent" %}</h2>
+    <p>{% trans "Please check your email for instructions on resetting your password." %}</p>
+  </div>
+</div>
 {% endblock %}
