Update 404 page text and link

--- a/opentreemap/treemap/templates/404.html
+++ b/opentreemap/treemap/templates/404.html
@@ -14,12 +14,17 @@
         <div class="well error-panel">
                 <div class="error-icon error-icon-img"><img src="/static/img/404.png"></div>
                 <h2>{% trans "No trees here!" %}</h2>
-                <p>{% trans "Uh oh! Looks like we couldn’t find what you’re looking for. How about " %}
-                  {% if request.instance %}
-                        <a href="{% url 'map' instance_url_name=request.instance.url_name %}">{% trans "exploring trees" %}</a>
-                        {% trans " or " %}
-                  {% endif %}
-                        <a href="javascript:;">{% trans "contacting support." %}</a>
+                <p>
+                    {% trans "Sorry, we couldn't find the page you requested." %} 
+                    {% if request.instance %}
+                        {% trans "Try"} 
+                        <a href="{% url 'map' instance_url_name=request.instance.url_name %}">{% trans "exploring trees" %}</a> 
+                        {% trans "or feel free to" %} 
+                    {% else %}
+                        {% trans "You're welcome to " %} 
+                    {% endif %}
+                    <a href="mailto:opentreemap@azavea.com">{% trans "contact support" %}</a> 
+                    {% trans "if you feel like you reached this page in error." %}
                 </p>
         </div>
 </div>
