--- a/opentreemap/treemap/templates/base.html
+++ b/opentreemap/treemap/templates/base.html
@@ -31,6 +31,17 @@
     {% endblock head_extra %}
   </head>
   <body>
+    {% if settings.GOOGLE_ANALYTICS %}
+    <!-- Google Tag Manager -->
+    <noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-{{ settings.GOOGLE_ANALYTICS }}"
+                      height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+      new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+      j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+      '//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+      })(window,document,'script','dataLayer','GTM-{{ settings.GOOGLE_ANALYTICS }}');</script>
+    <!-- End Google Tag Manager -->
+    {% endif %}
     <div class="wrapper">
       {% block topnav %}
       <!-- Top Nav -->
