Add SUPPORT_EMAIL_ADDRESS to settings
Fixes #676.

This was already wired up in some places- but it hadn't been
defined. Now it should be used everywhere where a contact/support email
is needed.

--- a/opentreemap/treemap/templates/404.html
+++ b/opentreemap/treemap/templates/404.html
@@ -23,7 +23,7 @@
                     {% else %}
                         {% trans "You're welcome to " %}
                     {% endif %}
-                    <a href="mailto:opentreemap@azavea.com">{% trans "contact support" %}</a> 
+                    <a href="mailto:{{ settings.SUPPORT_EMAIL_ADDRESS }}">{% trans "contact support" %}</a>
                     {% trans "if you feel like you reached this page in error." %}
                 </p>
         </div>
