--- a/opentreemap/treemap/css/sass/partials/_typography.scss
+++ b/opentreemap/treemap/css/sass/partials/_typography.scss
@@ -19,12 +19,16 @@ h1, h2, h3, h4, h4, h5 {
 
 p, li {
 	line-height: 1.25em;
-	font-size: em(14px);
+	font-size: 0.875em;
+
+	label {
+		font-size: 0.875em;
+	}
 }
 
 label {
 	color: $subtext-color;
-	font-size: em(12px);
+	font-size: 0.75em;
 	font-weight: 400;
 
 	&.radio.inline,
