--- a/opentreemap/treemap/templates/treemap/partials/plot_popup.html
+++ b/opentreemap/treemap/templates/treemap/partials/plot_popup.html
@@ -14,12 +14,11 @@
     </address>
 </div>
 <div>
-    <a 
-         href="{% url 'plot_detail' instance_url_name=request.instance.url_name plot_id=plot.pk %}" 
+    <a href="{% url 'plot_detail' instance_url_name=request.instance.url_name plot_id=plot.pk %}" 
        class="btn btn-small btn-secondary">{% trans "View all details" %}</a>
 
     <a disabled="disabled"
-       data-always-enable="{{ request.instance_user|plot_is_writable }}"
+       data-always-enable="{{ last_effective_instance_user|plot_is_writable }}"
        data-disabled-title="{% trans "Editing a tree's details is not available to all users" %}"
        data-href="{% url 'plot_detail_edit' instance_url_name=request.instance.url_name plot_id=plot.pk edit='edit' %}"
        class="btn btn-small btn-info">{% trans "Edit details" %}</a>
