Fixes #750, font-size issues

--- a/opentreemap/treemap/css/sass/partials/_footer.scss
+++ b/opentreemap/treemap/css/sass/partials/_footer.scss
@@ -14,6 +14,7 @@ footer {
     a {
         color: $subtext-color;
         font-weight: 700;
+        font-size: 12px;
 
         &:hover {
             color: $main-text-color;
