--- a/opentreemap/treemap/css/sass/partials/_sidebar.scss
+++ b/opentreemap/treemap/css/sass/partials/_sidebar.scss
@@ -118,7 +118,8 @@
             margin: 0;
         }
         input[type='radio'] {
-            margin-top: 0;
+            margin-top: -1px;
+            margin-right: 5px;
         }
     }
 
@@ -184,7 +185,7 @@
 }
 
 #add-tree-address {
-    width: 200px;
+    width: 195px;
     font-size: em(14px);
 }
 
