Revert only showing elements with content in them, Fixes #757
43c12d237e attempted to only show elements when there was content in them,
which broke the UI in several other interesting ways.

Instead we will handle this in CSS with :empty, which is why all error
elements have carefully had spaces removed from them.

--- a/opentreemap/treemap/templates/treemap/field/hidden.html
+++ b/opentreemap/treemap/templates/treemap/field/hidden.html
@@ -8,8 +8,7 @@
     <div {% include "treemap/field/attrs.html" with class="edit" %}>
       {% include "treemap/field/inputs.html" %}
     </div>
-    <div {% include "treemap/field/attrs.html" with class="error" %}>
-    </div>
+    <div {% include "treemap/field/attrs.html" with class="error" %}></div>
   {% endif %}
 </div>
 {% endif %}
