--- a/opentreemap/treemap/templates/treemap/field/species_div.html
+++ b/opentreemap/treemap/templates/treemap/field/species_div.html
@@ -16,8 +16,7 @@
     </div>
     <div class="alert alert-error text-error"
         style="display: none;"
-        {% include "treemap/field/attrs.html" with class="error"%}>
-    </div>
+        {% include "treemap/field/attrs.html" with class="error"%}></div>
   </div>
   {% endif %}
 {% endif %}
