--- a/opentreemap/treemap/templates/treemap/field/tr.html
+++ b/opentreemap/treemap/templates/treemap/field/tr.html
@@ -11,8 +11,7 @@
         {% include "treemap/field/inputs.html" %}
       </td>
       <td style="display:none;"
-          {% include "treemap/field/attrs.html" with class="error" %}>
-      </td>
+          {% include "treemap/field/attrs.html" with class="error" %}></td>
     {% endif %}
   </tr>
 {% endif %}
