--- a/opentreemap/treemap/templates/treemap/field/diameter_tr.html
+++ b/opentreemap/treemap/templates/treemap/field/diameter_tr.html
@@ -15,8 +15,7 @@
       {% include "treemap/partials/diameter_calculator.html" %}
       </td>
     <td style="display:none;"
-        {% include "treemap/field/attrs.html" with class="error" %}>
-    </td>
+        {% include "treemap/field/attrs.html" with class="error" %}></td>
   {% endif %}
   </tr>
 {% endif %}
