--- a/opentreemap/treemap/templates/treemap/field/div.html
+++ b/opentreemap/treemap/templates/treemap/field/div.html
@@ -14,7 +14,6 @@
         </div>
         <div class="alert alert-error text-error"
             style="display: none;"
-            {% include "treemap/field/attrs.html" with class="error" %}>
-        </div>
+            {% include "treemap/field/attrs.html" with class="error" %}></div>
     {% endif %}
 {% endif %}
