--- a/opentreemap/treemap/templates/treemap/field/species_tr.html
+++ b/opentreemap/treemap/templates/treemap/field/species_tr.html
@@ -22,8 +22,7 @@
     </td>
     <td class="text-error"
         style="display: none;"
-        {% include "treemap/field/attrs.html" with class="error"%}>
-    </td>
+        {% include "treemap/field/attrs.html" with class="error"%}></td>
   </tr>
   {% endif %}
 {% endif %}
