Use :empty to fix error message display

--- a/opentreemap/treemap/css/sass/partials/_admin.scss
+++ b/opentreemap/treemap/css/sass/partials/_admin.scss
@@ -63,5 +63,20 @@
     
     .tab-content {
         overflow: hidden;
+
+        > .tab-pane {
+            min-height: 650px;
+        }
+    }
+
+    .messages {
+        &:empty {
+            display: none;
+        }
+
+        > ul,
+        > p {
+            margin: 0;
+        }
     }
 }
