Add :empty on text-error inline form messages

--- a/opentreemap/treemap/css/sass/partials/_admin.scss
+++ b/opentreemap/treemap/css/sass/partials/_admin.scss
@@ -69,9 +69,10 @@
         }
     }
 
-    .messages {
+    .messages,
+    .text-error {
         &:empty {
-            display: none;
+            display: none !important;
         }
 
         > ul,
