hide diam calc total field when only one trunk
fixes #655 on github.

Instead of having a readonly input field, the input field used for the inlineEditForm is now totally hidden. In addition, there is a input field underneath the worksheet that will show the total when multiple trunks are added.

--- a/opentreemap/treemap/templates/treemap/field/diameter_div.html
+++ b/opentreemap/treemap/templates/treemap/field/diameter_div.html
@@ -4,6 +4,6 @@
 {% block label %}{% trans "Total Trunk Diameter" %}{% endblock %}
 
 {% block inputs %}
-  {% include "treemap/field/inputs.html" with extra='readonly=readonly' %}
+  {% include "treemap/field/inputs.html" with extra='style="display:none"' unit_extra='style="display:none"' %}
   {% include "treemap/partials/diameter_calculator.html" %}
 {% endblock inputs %}
