--- a/opentreemap/treemap/templates/treemap/field/diameter_tr.html
+++ b/opentreemap/treemap/templates/treemap/field/diameter_tr.html
@@ -9,9 +9,7 @@
     {% if field.is_editable %}
       <td style="display: none;"
           {% include "treemap/field/attrs.html" with class="edit" %}>
-          {% with 'readonly=readonly' as extras %}
-            {% include "treemap/field/inputs.html" with extra=extras %}
-          {% endwith %}
+          {% include "treemap/field/inputs.html" with extra='style="display:none"' unit_extra='style="display:none"' %}
       {% include "treemap/partials/diameter_calculator.html" %}
       </td>
     <td style="display:none;"
