Fix a few typeahead issues.
typeahead.js caches its Datasets by name, so typeaheads sharing names
forced them to share dataset options, which made add a tree continue to
show the list on focus.

We also were missing the trailing '/' on URLs, which was causing two
requests, one for a 301 redirect.

--- a/opentreemap/treemap/templates/treemap/plot_detail.html
+++ b/opentreemap/treemap/templates/treemap/plot_detail.html
@@ -211,8 +211,8 @@
           addTreeSection: '#add-tree-section',
           treeSection: '#tree-details',
           typeaheads: [{
-              name: "species",
-              url: config.instance.url + "species",
+              name: "species-edit",
+              url: config.instance.url + "species/",
               input: "#plot-species-typeahead",
               template: "#species-element-template",
               hidden: "#plot-species-hidden",
