--- a/opentreemap/treemap/templates/base.html
+++ b/opentreemap/treemap/templates/base.html
@@ -8,7 +8,7 @@
     <title>{% block title %}OpenTreeMap{% block instance_title %}{% endblock %}{% block page_title %}{% endblock %}{% endblock title %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta charset="utf-8" />
-
+    <link rel="icon" type="image/png" href="/favicon.png" />
     {% if settings.TEMPLATE_DEBUG %}
     <link href="{{ STATIC_URL }}css/vendor.css" rel="stylesheet">
     {% else %}
