Allow geocoder to work without an instance
* Don't assume there's a config.instance.extent to filter the results
* Move geocode-results-template from instance_base.html to base.html so it can be used without an instance

Also:
* Add and use utility webMercatorToLeafletLatLng()
* Alphabetize aliases in Gruntfile

--- a/opentreemap/treemap/templates/base.html
+++ b/opentreemap/treemap/templates/base.html
@@ -148,6 +148,16 @@
     {% block templates %}
     {% endblock templates %}
 
+    {% verbatim %}
+    <script id="geocode-results-template" type="text/x-mustache-template">
+      <ul class="unstyled">
+        {{#candidates}}
+        <li><a href="javascript:;" data-class="geocode-result" data-x="{{x}}" data-y="{{y}}" data-srid="{{srid}}" data-address"{{address}}">{{address}}</a></li>
+        {{/candidates}}
+      </ul>
+    </script>
+    {% endverbatim %}
+
     {% block scripts %}
     {% endblock scripts %}
 
