Sidebar button: 'Edit Details' -> 'Quick Edit'
fixes #782 on github.

Fixes ambiguity in the two 'Edit Details' buttons:
If you click on a plot/tree, an infowindow will pop up with an Edit Details button, and the sidebar accordion will also have an Edit Details button. One redirects to the plot_detail page, the other triggers the inlineEditForm. This is confusing behavior, seeing two buttons with the same text that do different things.

--- a/opentreemap/treemap/templates/treemap/map-browse-trees.html
+++ b/opentreemap/treemap/templates/treemap/map-browse-trees.html
@@ -16,7 +16,7 @@
                 data-always-enable="{{ last_effective_instance_user|plot_is_writable }}"
                 data-href="{{ request.get_full_path }}"
                 data-disabled-title="{% trans "Editing of the tree details is not available to all users" %}"
-                disabled="disabled">Edit Details</button>
+                disabled="disabled">{% trans "Quick Edit" %}</button>
                 <button class="btn btn-success" data-class="edit" id="save-details-button" style="display:none">Save</button>
                 <button class="btn" data-class="edit" id="cancel-edit-details-button" style="display:none">Cancel</button>
       </div>
