--- a/opentreemap/treemap/templates/treemap/photo_review.html
+++ b/opentreemap/treemap/templates/treemap/photo_review.html
@@ -1,7 +1,7 @@
 {% extends "instance_base.html" %}
 {% load i18n %}
 
-{% block page_title %} | {% trans "Recent Edits" %} {{plot.pk}}{% endblock %}
+{% block page_title %} | {% trans "Edits" %} {{plot.pk}}{% endblock %}
 
 {% block content %}
 
