--- a/opentreemap/treemap/templates/treemap/edits.html
+++ b/opentreemap/treemap/templates/treemap/edits.html
@@ -125,7 +125,7 @@ active
             {% endif %}
           </td>
           <td>
-            {% if audit.clean_previous_value %}
+            {% if audit.clean_current_value %}
             {{ audit.clean_current_value.x|floatformat:0 }},
             {{ audit.clean_current_value.y|floatformat:0 }}
             {% endif %}
